Feat: PATCH api v3 fixed sessions (#1229)
* feat: api v3 update fixed session

* docs: simpllify swagger
